--- a/tours.html
+++ b/tours.html
@@ -127,7 +127,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/1.jpg" alt="" />
@@ -146,7 +146,7 @@
               </a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/2.jpg" alt="" />
@@ -165,7 +165,7 @@
               </a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/3.jpg" alt="" />
@@ -182,7 +182,7 @@
               </a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/4.jpg" alt="" />
@@ -199,7 +199,7 @@
               </a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/1.jpg" alt="" />
@@ -218,7 +218,7 @@
               </a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/2.jpg" alt="" />
@@ -237,7 +237,7 @@
               </a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/3.jpg" alt="" />
@@ -254,7 +254,7 @@
               </a>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-5">
-              <a href="#" class="splide__slide">
+              <a href="tour-page.html" class="splide__slide">
                 <article class="tour__item">
                   <div class="tour__picture">
                     <img src="img/popular-tours/4.jpg" alt="" />
